Full dataset available

--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -64,11 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = anndata.read_h5ad(\"data/big_table_with_embeddings_1000.h5ad\")\n"
+    "# adata = anndata.read_h5ad(\"data/big_table_with_embeddings_1000.h5ad\")\n",
+    "adata = anndata.read_h5ad(\"data/big_table_with_embeddings_full.h5ad\")\n"
    ]
   },
   {
@@ -93,13 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3dcb733529d4839aa757cf6e9942ebd",
+       "model_id": "5dead23d33f84524a80bb177218a4b4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -113,18 +114,18 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f162a10d7a6e41e68cb0489e344d4045",
+       "model_id": "93b0ecc69bd541be81168d878fd23c00",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "FigureWidget({\n",
-       "    'data': [{'marker': {'color': 'gray'},\n",
+       "    'data': [{'marker': {'color': 'gray', 'size': 4},\n",
        "              'mode': 'markers',\n",
        "              'name': 'NaN values',\n",
        "              'text': [],\n",
        "              'type': 'scattergl',\n",
-       "              'uid': '4cd79257-7f0d-4f8f-868b-cbf2d5b916f7',\n",
+       "              'uid': '7f03e758-37ab-4cf1-a865-47c7708fc50e',\n",
        "              'x': [],\n",
        "              'y': []},\n",
        "             {'marker': {'color': [],\n",
@@ -137,19 +138,20 @@
        "                                        '#d8576b'], [0.6666666666666666,\n",
        "                                        '#ed7953'], [0.7777777777777778,\n",
        "                                        '#fb9f3a'], [0.8888888888888888,\n",
-       "                                        '#fdca26'], [1.0, '#f0f921']]},\n",
+       "                                        '#fdca26'], [1.0, '#f0f921']],\n",
+       "                         'size': 4},\n",
        "              'mode': 'markers',\n",
        "              'name': 'Valid values',\n",
        "              'text': [],\n",
        "              'type': 'scattergl',\n",
-       "              'uid': 'fb95c562-a457-4cd7-9291-83fc43450a67',\n",
+       "              'uid': '521126ec-a71d-4e08-bf46-99b76d542f26',\n",
        "              'x': [],\n",
        "              'y': []},\n",
        "             {'line': {'color': 'black'},\n",
        "              'mode': 'lines',\n",
        "              'name': 'Poincare disk boundary',\n",
        "              'type': 'scattergl',\n",
-       "              'uid': '1c9b8e87-14ba-4e6f-831e-469c7b022209',\n",
+       "              'uid': '749fd81c-4b3a-48d7-ac5f-6b671930e51d',\n",
        "              'x': [],\n",
        "              'y': []}],\n",
        "    'layout': {'autosize': False,\n",
@@ -188,7 +190,7 @@
     "    y=[],\n",
     "    mode=\"markers\",\n",
     "    text=[],\n",
-    "    marker=dict(color=\"gray\", colorbar=None),\n",
+    "    marker=dict(color=\"gray\", colorbar=None, size=4),\n",
     "    name=\"NaN values\",\n",
     ")\n",
     "scatter = go.Scattergl(\n",
@@ -196,7 +198,7 @@
     "    y=[],\n",
     "    mode=\"markers\",\n",
     "    text=[],\n",
-    "    marker=dict(color=[], colorscale=\"Plasma\", colorbar=dict(title=\"\")),\n",
+    "    marker=dict(color=[], colorscale=\"Plasma\", size=4, colorbar=dict(title=\"\")),\n",
     "    name=\"Valid values\",\n",
     ")\n",
     "\n",
@@ -236,7 +238,6 @@
     "circle_x = np.cos(t)\n",
     "circle_y = np.sin(t)\n",
     "\n",
-    "\n",
     "# Update function: change embeddings, color, text\n",
     "def plot_on_click(b):\n",
     "    embedding = embed_dropdown.value\n",
@@ -271,11 +272,11 @@
     "    # Update text to include metadata\n",
     "    fig.data[0].text = [\n",
     "        f\"Index: {i}<br>{metadata}: {j}\"\n",
-    "        for i, j in zip(adata.obs.index[~nan_mask], col[~nan_mask])\n",
+    "        for i, j in zip(adata.obs.index[nan_mask], col[nan_mask])\n",
     "    ]\n",
     "    fig.data[1].text = [\n",
     "        f\"Index: {i}<br>{metadata}: {j}\"\n",
-    "        for i, j in zip(adata.obs.index[nan_mask], col[nan_mask])\n",
+    "        for i, j in zip(adata.obs.index[~nan_mask], col[~nan_mask])\n",
     "    ]\n",
     "\n",
     "\n",
