FInalized visualization code

--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -11,12 +11,46 @@
      "text": [
       "Requirement already satisfied: plotly in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (5.15.0)\n",
       "Requirement already satisfied: tenacity>=6.2.0 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from plotly) (8.2.2)\n",
-      "Requirement already satisfied: packaging in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from plotly) (23.0)\n"
+      "Requirement already satisfied: packaging in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from plotly) (23.0)\n",
+      "Requirement already satisfied: ipywidgets in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (8.0.4)\n",
+      "Requirement already satisfied: ipykernel>=4.5.1 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipywidgets) (6.19.2)\n",
+      "Requirement already satisfied: ipython>=6.1.0 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipywidgets) (8.12.0)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipywidgets) (5.7.1)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipywidgets) (4.0.5)\n",
+      "Requirement already satisfied: jupyterlab-widgets~=3.0 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipywidgets) (3.0.5)\n",
+      "Requirement already satisfied: comm>=0.1.1 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipykernel>=4.5.1->ipywidgets) (0.1.2)\n",
+      "Requirement already satisfied: debugpy>=1.0 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipykernel>=4.5.1->ipywidgets) (1.5.1)\n",
+      "Requirement already satisfied: jupyter-client>=6.1.12 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipykernel>=4.5.1->ipywidgets) (8.1.0)\n",
+      "Requirement already satisfied: matplotlib-inline>=0.1 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipykernel>=4.5.1->ipywidgets) (0.1.6)\n",
+      "Requirement already satisfied: nest-asyncio in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipykernel>=4.5.1->ipywidgets) (1.5.6)\n",
+      "Requirement already satisfied: packaging in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipykernel>=4.5.1->ipywidgets) (23.0)\n",
+      "Requirement already satisfied: psutil in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipykernel>=4.5.1->ipywidgets) (5.9.0)\n",
+      "Requirement already satisfied: pyzmq>=17 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipykernel>=4.5.1->ipywidgets) (25.1.0)\n",
+      "Requirement already satisfied: tornado>=6.1 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipykernel>=4.5.1->ipywidgets) (6.2)\n",
+      "Requirement already satisfied: backcall in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipython>=6.1.0->ipywidgets) (0.2.0)\n",
+      "Requirement already satisfied: decorator in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipython>=6.1.0->ipywidgets) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipython>=6.1.0->ipywidgets) (0.18.1)\n",
+      "Requirement already satisfied: pickleshare in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipython>=6.1.0->ipywidgets) (0.7.5)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipython>=6.1.0->ipywidgets) (3.0.36)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipython>=6.1.0->ipywidgets) (2.15.1)\n",
+      "Requirement already satisfied: stack-data in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipython>=6.1.0->ipywidgets) (0.2.0)\n",
+      "Requirement already satisfied: pexpect>4.3 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from ipython>=6.1.0->ipywidgets) (4.8.0)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets) (0.8.3)\n",
+      "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets) (5.3.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets) (2.8.2)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30->ipython>=6.1.0->ipywidgets) (0.2.5)\n",
+      "Requirement already satisfied: executing in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.8.3)\n",
+      "Requirement already satisfied: asttokens in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.0.5)\n",
+      "Requirement already satisfied: pure-eval in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.2)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from jupyter-core!=5.0.*,>=4.12->jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets) (2.5.2)\n",
+      "Requirement already satisfied: six>=1.5 in /home/phil/mambaforge/envs/americangut/lib/python3.11/site-packages (from python-dateutil>=2.8.2->jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets) (1.16.0)\n"
      ]
     }
    ],
    "source": [
-    "!pip install plotly"
+    "!pip install plotly\n",
+    "!pip install ipywidgets"
    ]
   },
   {
@@ -64,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,22 +108,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nan_vals = [\n",
-    "    np.nan,\n",
-    "    np.inf,\n",
-    "    -np.inf,\n",
-    "    \"nan\",\n",
-    "    \"N/A\",\n",
-    "    \"n/a\",\n",
-    "    \"NA\",\n",
-    "    \"na\",\n",
-    "    \"NaN\",\n",
-    "    \"NAN\",\n",
-    "]\n"
+    "nan_vals = [np.nan, np.inf, -np.inf, \"nan\", \"n/a\", \"na\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add F:B ratio\n",
+    "\n",
+    "f_cols = adata.var[adata.var[\"taxonomy_1\"] == \"p__Firmicutes\"].index\n",
+    "b_cols = adata.var[adata.var[\"taxonomy_1\"] == \"p__Bacteroidetes\"].index\n",
+    "\n",
+    "f_vals = adata[:, f_cols].X.sum(axis=1)\n",
+    "b_vals = adata[:, b_cols].X.sum(axis=1) + 1e-6\n",
+    "\n",
+    "fb_ratio = f_vals / b_vals\n",
+    "adata.obs[\"fb_ratio\"] = np.clip(fb_ratio, 0, 10)\n"
    ]
   },
   {
@@ -100,70 +141,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5dead23d33f84524a80bb177218a4b4e",
+       "model_id": "94a3899b92d7477a8ba03386606d4bb3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Dropdown(description='Embedding:', options=('e2', 'h2', 'pca2'), value='e2'), Dropdown(descript…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93b0ecc69bd541be81168d878fd23c00",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FigureWidget({\n",
-       "    'data': [{'marker': {'color': 'gray', 'size': 4},\n",
-       "              'mode': 'markers',\n",
-       "              'name': 'NaN values',\n",
-       "              'text': [],\n",
-       "              'type': 'scattergl',\n",
-       "              'uid': '7f03e758-37ab-4cf1-a865-47c7708fc50e',\n",
-       "              'x': [],\n",
-       "              'y': []},\n",
-       "             {'marker': {'color': [],\n",
-       "                         'colorbar': {'title': {'text': ''}},\n",
-       "                         'colorscale': [[0.0, '#0d0887'], [0.1111111111111111,\n",
-       "                                        '#46039f'], [0.2222222222222222,\n",
-       "                                        '#7201a8'], [0.3333333333333333,\n",
-       "                                        '#9c179e'], [0.4444444444444444,\n",
-       "                                        '#bd3786'], [0.5555555555555556,\n",
-       "                                        '#d8576b'], [0.6666666666666666,\n",
-       "                                        '#ed7953'], [0.7777777777777778,\n",
-       "                                        '#fb9f3a'], [0.8888888888888888,\n",
-       "                                        '#fdca26'], [1.0, '#f0f921']],\n",
-       "                         'size': 4},\n",
-       "              'mode': 'markers',\n",
-       "              'name': 'Valid values',\n",
-       "              'text': [],\n",
-       "              'type': 'scattergl',\n",
-       "              'uid': '521126ec-a71d-4e08-bf46-99b76d542f26',\n",
-       "              'x': [],\n",
-       "              'y': []},\n",
-       "             {'line': {'color': 'black'},\n",
-       "              'mode': 'lines',\n",
-       "              'name': 'Poincare disk boundary',\n",
-       "              'type': 'scattergl',\n",
-       "              'uid': '749fd81c-4b3a-48d7-ac5f-6b671930e51d',\n",
-       "              'x': [],\n",
-       "              'y': []}],\n",
-       "    'layout': {'autosize': False,\n",
-       "               'height': 1000,\n",
-       "               'hovermode': 'closest',\n",
-       "               'legend': {'bgcolor': 'rgba(0,0,0,0)', 'x': 1.1, 'y': 0.5},\n",
-       "               'template': '...',\n",
-       "               'title': {'text': 'Plotting Embeddings'},\n",
-       "               'width': 1000,\n",
-       "               'xaxis': {'title': {'text': 'X'}},\n",
-       "               'yaxis': {'title': {'text': 'Y'}}}\n",
-       "})"
+       "VBox(children=(VBox(children=(Dropdown(description='Embedding:', options=('e2', 'h2', 'pca2'), value='e2'), Dr…"
       ]
      },
      "metadata": {},
@@ -172,6 +155,7 @@
    ],
    "source": [
     "import plotly.express as px\n",
+    "from ipywidgets.embed import embed_minimal_html\n",
     "\n",
     "obsm_matrices = list(adata.obsm.keys())\n",
     "metadata_vars = list(adata.obs.keys())\n",
@@ -283,8 +267,11 @@
     "plot_button.on_click(plot_on_click)\n",
     "\n",
     "vbox = widgets.VBox([embed_dropdown, metadata_dropdown, plot_button])\n",
-    "display(vbox)\n",
-    "display(fig)\n"
+    "vbox_all = widgets.VBox([vbox, fig])\n",
+    "display(vbox_all)\n",
+    "\n",
+    "# Save plot\n",
+    "# embed_minimal_html(\"plot.html\", views=[vbox_all], title=\"Mixture embeddings AGP\")"
    ]
   },
   {
