Add plots + classifier capabilities

--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -98,17 +98,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# adata = anndata.read_h5ad(\"data/big_table_with_embeddings_1000.h5ad\")\n",
-    "adata = anndata.read_h5ad(\"data/big_table_with_embeddings_full.h5ad\")\n"
+    "# adata = anndata.read_h5ad(\"data/americangut_embeddings.h5ad\")\n",
+    "# adata = anndata.read_h5ad(\"data/delete/big_table_with_embeddings_full.h5ad\")\n",
+    "adata = anndata.read_h5ad(\"data/big_table_with_embeddings.h5ad\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,18 +137,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropping public with only one unique value\n",
+      "Dropping physical_specimen_location with only one unique value\n",
+      "Dropping host_weight_units with only one unique value\n",
+      "Dropping host_height_units with only one unique value\n",
+      "Dropping host_common_name with only one unique value\n",
+      "Dropping host_age_units with only one unique value\n",
+      "Dropping fermented_produce_personal_fish_sauce with only one unique value\n",
+      "Dropping fermented_produce_commercial_tempeh with only one unique value\n",
+      "Dropping fermented_produce_commercial_kombucha with only one unique value\n",
+      "Dropping fermented_produce_commercial_kefir_water with only one unique value\n",
+      "Dropping fermented_produce_commercial_fish_sauce with only one unique value\n",
+      "Dropping fermented_produce_commercial_fermented_tofu with only one unique value\n",
+      "Dropping fermented_produce_commercial_fermented_beansmisonatto with only one unique value\n",
+      "Dropping fermented_produce_commercial_cottage_cheese with only one unique value\n",
+      "Dropping fermented_produce_commercial_chicha with only one unique value\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop boring columns\n",
+    "for col in reversed(adata.obs.columns):\n",
+    "    vals = adata.obs[col]\n",
+    "    if vals.dtype.name == \"category\":\n",
+    "        vals = vals.str.lower()\n",
+    "        nan_indicator = vals.isin(nan_vals)\n",
+    "        n_nans = nan_indicator.sum()\n",
+    "        vals_filtered = vals[~nan_indicator]\n",
+    "    else:\n",
+    "        nan_indicator = np.isnan(vals)\n",
+    "        n_nans = nan_indicator.sum()\n",
+    "    if n_nans > 20000:\n",
+    "        print(f\"Dropping {col} with {n_nans} nan values\")\n",
+    "        adata.obs.drop(columns=col, inplace=True)\n",
+    "\n",
+    "    if vals[~nan_indicator].nunique() == 1:\n",
+    "        print(f\"Dropping {col} with only one unique value\")\n",
+    "        adata.obs.drop(columns=col, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94a3899b92d7477a8ba03386606d4bb3",
+       "model_id": "084151992f104c09a52c82628d9fb5e4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(Dropdown(description='Embedding:', options=('e2', 'h2', 'pca2'), value='e2'), Dr…"
+       "VBox(children=(VBox(children=(Dropdown(description='Embedding:', options=('euc_mix_128', 'euc_mix_16', 'euc_mi…"
       ]
      },
      "metadata": {},
@@ -227,7 +277,7 @@
     "    embedding = embed_dropdown.value\n",
     "    x = adata.obsm[embedding][:, 0]\n",
     "    y = adata.obsm[embedding][:, 1]\n",
-    "    if embedding == \"h2\":\n",
+    "    if embedding in [\"h2\", \"poi_mix_2\"]:\n",
     "        fig.data[2].x = circle_x\n",
     "        fig.data[2].y = circle_y\n",
     "    else:\n",
@@ -279,7 +329,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "adata.obsm[\"poi_\"]"
+   ]
   }
  ],
  "metadata": {
