--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -652,7 +652,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57a6c8de85034c778ac432266a1c1150",
+       "model_id": "8f8757cfd11042138bb41a33bc398175",
        "version_major": 2,
        "version_minor": 0
       },
@@ -787,25 +787,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'poi_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m adata\u001b[39m.\u001b[39;49mobsm[\u001b[39m\"\u001b[39;49m\u001b[39mpoi_\u001b[39;49m\u001b[39m\"\u001b[39;49m]\n",
-      "File \u001b[0;32m~/mambaforge/envs/americangut/lib/python3.11/site-packages/anndata/_core/aligned_mapping.py:178\u001b[0m, in \u001b[0;36mAlignedActualMixin.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    177\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, key: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m V:\n\u001b[0;32m--> 178\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_data[key]\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'poi_'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "adata.obsm[\"poi_\"]\n"
+    "pd.DataFrame(\n",
+    "    data=adata.obsm[\"geomstats_hyperboloid_mix_CONVERTED_2_100iter\"],\n",
+    "    index=adata.obs.index,\n",
+    "    columns=[\"x\", \"y\"],\n",
+    ").to_csv(\"data/2d_hyperboloid_mix.csv\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For offline troubleshooting\n",
+    "\n",
+    "np.savetxt(\n",
+    "    \"data/2d_hyperboloid_mix.csv\",\n",
+    "    adata.obsm[\"geomstats_hyperboloid_mix_CONVERTED_2_100iter\"]\n",
+    ")\n",
+    "adata.obs.to_csv(\"data/2d_hyperboloid_mix_metadata.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
