--- a/4_visualize.ipynb
+++ b/4_visualize.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -646,13 +646,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f8757cfd11042138bb41a33bc398175",
+       "model_id": "46061e9ba9b7434d87d2b5cccec7178e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -669,7 +669,15 @@
     "from ipywidgets.embed import embed_minimal_html\n",
     "\n",
     "obsm_matrices = list(adata.obsm.keys())\n",
+    "# obsm_matrices = [\"euc_mix_2\", \"geomstats_hyperboloid_mix_CONVERTED_2\", \"hyp_mix_2_PAC\", \"pca_2\"]\n",
     "metadata_vars = list(adata.obs.keys())\n",
+    "# component_vars = list(adata.varm.keys())\n",
+    "# component_vars.append(None)\n",
+    "component_vars = [\n",
+    "    \"component_embeddings_euclidean_2\",\n",
+    "    \"component_embeddings_poincare_2\",\n",
+    "    None,\n",
+    "]\n",
     "\n",
     "# Create two blank figures, one for NaN values and one for regular data\n",
     "# This has colorbar set to None so that it doesn't show up\n",
@@ -696,9 +704,19 @@
     "    marker=dict(color=[], colorscale=\"Plasma\", size=4, colorbar=dict(title=\"\")),\n",
     "    name=\"Valid values\",\n",
     ")\n",
+    "scatter_components = go.Scattergl(\n",
+    "    x=[],\n",
+    "    y=[],\n",
+    "    mode=\"markers\",\n",
+    "    text=[],\n",
+    "    marker=dict(\n",
+    "        color=[], colorscale=\"Viridis\", size=4, colorbar=dict(title=\"\")\n",
+    "    ),\n",
+    "    name=\"OTUs\",\n",
+    ")\n",
     "\n",
     "fig = go.FigureWidget(\n",
-    "    data=[scatter_nan, scatter, pdisk],\n",
+    "    data=[scatter_nan, scatter, pdisk, scatter_components],\n",
     "    layout=go.Layout(\n",
     "        title=dict(text=\"Plotting Embeddings\"),\n",
     "        xaxis=dict(title=\"X\"),\n",
@@ -718,6 +736,9 @@
     ")\n",
     "metadata_dropdown = widgets.Dropdown(\n",
     "    options=metadata_vars, value=metadata_vars[0], description=\"Metadata:\"\n",
+    ")\n",
+    "component_dropdown = widgets.Dropdown(\n",
+    "    options=component_vars, value=None, description=\"OTU embeddings:\"\n",
     ")\n",
     "plot_button = widgets.Button(description=\"Plot\")\n",
     "\n",
@@ -774,10 +795,33 @@
     "        for i, j in zip(adata.obs.index[~nan_mask], col[~nan_mask])\n",
     "    ]\n",
     "\n",
+    "    # Add component embeddings\n",
+    "    if component_dropdown.value is not None:\n",
+    "        ce = adata.varm[component_dropdown.value]\n",
+    "        if isinstance(ce, pd.DataFrame):\n",
+    "            ce = ce.values\n",
+    "        ce_x = ce[:, 0]\n",
+    "        ce_y = ce[:, 1]\n",
+    "        fig.data[3].x = ce_x\n",
+    "        fig.data[3].y = ce_y\n",
+    "        fig.data[3].text = [\n",
+    "            f\"{i}<br>{' '.join(adata.var.loc[i])}\" for i in adata.var.index\n",
+    "        ]\n",
+    "        fig.data[3].marker.color = (\n",
+    "            adata.var[\"taxonomy_1\"].astype(\"category\").cat.codes\n",
+    "        )\n",
+    "    else:\n",
+    "        fig.data[3].x = []\n",
+    "        fig.data[3].y = []\n",
+    "        fig.data[3].text = []\n",
+    "        fig.data[3].marker.color = []\n",
+    "\n",
     "\n",
     "plot_button.on_click(plot_on_click)\n",
     "\n",
-    "vbox = widgets.VBox([embed_dropdown, metadata_dropdown, plot_button])\n",
+    "vbox = widgets.VBox(\n",
+    "    [embed_dropdown, metadata_dropdown, component_dropdown, plot_button]\n",
+    ")\n",
     "vbox_all = widgets.VBox([vbox, fig])\n",
     "display(vbox_all)\n",
     "\n",
@@ -787,20 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.DataFrame(\n",
-    "    data=adata.obsm[\"geomstats_hyperboloid_mix_CONVERTED_2_100iter\"],\n",
-    "    index=adata.obs.index,\n",
-    "    columns=[\"x\", \"y\"],\n",
-    ").to_csv(\"data/2d_hyperboloid_mix.csv\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,9 +839,9 @@
     "\n",
     "np.savetxt(\n",
     "    \"data/2d_hyperboloid_mix.csv\",\n",
-    "    adata.obsm[\"geomstats_hyperboloid_mix_CONVERTED_2_100iter\"]\n",
+    "    adata.obsm[\"geomstats_hyperboloid_mix_CONVERTED_2_100iter\"],\n",
     ")\n",
-    "adata.obs.to_csv(\"data/2d_hyperboloid_mix_metadata.csv\")"
+    "adata.obs.to_csv(\"data/2d_hyperboloid_mix_metadata.csv\")\n"
    ]
   },
   {
