Batch effect exploration started

--- a/4_visualize.ipynb
+++ b/4_visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -646,13 +646,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46061e9ba9b7434d87d2b5cccec7178e",
+       "model_id": "237454d1ea07495694d2b8f828ead8db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -740,6 +740,8 @@
     "component_dropdown = widgets.Dropdown(\n",
     "    options=component_vars, value=None, description=\"OTU embeddings:\"\n",
     ")\n",
+    "dim1_textbox = widgets.Text(value=\"0\", description=\"Dim 1:\", disabled=False)\n",
+    "dim2_textbox = widgets.Text(value=\"1\", description=\"Dim 2:\", disabled=False)\n",
     "plot_button = widgets.Button(description=\"Plot\")\n",
     "\n",
     "# Function to find nans in metadata\n",
@@ -757,8 +759,10 @@
     "# Update function: change embeddings, color, text\n",
     "def plot_on_click(b):\n",
     "    embedding = embed_dropdown.value\n",
-    "    x = adata.obsm[embedding][:, 0]\n",
-    "    y = adata.obsm[embedding][:, 1]\n",
+    "    dim1 = int(dim1_textbox.value)\n",
+    "    dim2 = int(dim2_textbox.value)\n",
+    "    x = adata.obsm[embedding][:, dim1]\n",
+    "    y = adata.obsm[embedding][:, dim2]\n",
     "    if embedding in [\"h2\", \"poi_mix_2\"]:\n",
     "        fig.data[2].x = circle_x\n",
     "        fig.data[2].y = circle_y\n",
@@ -800,8 +804,8 @@
     "        ce = adata.varm[component_dropdown.value]\n",
     "        if isinstance(ce, pd.DataFrame):\n",
     "            ce = ce.values\n",
-    "        ce_x = ce[:, 0]\n",
-    "        ce_y = ce[:, 1]\n",
+    "        ce_x = ce[:, dim1]\n",
+    "        ce_y = ce[:, dim2]\n",
     "        fig.data[3].x = ce_x\n",
     "        fig.data[3].y = ce_y\n",
     "        fig.data[3].text = [\n",
@@ -820,7 +824,14 @@
     "plot_button.on_click(plot_on_click)\n",
     "\n",
     "vbox = widgets.VBox(\n",
-    "    [embed_dropdown, metadata_dropdown, component_dropdown, plot_button]\n",
+    "    [\n",
+    "        embed_dropdown,\n",
+    "        metadata_dropdown,\n",
+    "        component_dropdown,\n",
+    "        dim1_textbox,\n",
+    "        dim2_textbox,\n",
+    "        plot_button,\n",
+    "    ]\n",
     ")\n",
     "vbox_all = widgets.VBox([vbox, fig])\n",
     "display(vbox_all)\n",
@@ -831,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
