Add horopca, body sites

--- a/4_visualize.ipynb
+++ b/4_visualize.ipynb
@@ -652,7 +652,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "376cf00d5d814e92b923eba05eb9eb44",
+       "model_id": "ebd022415f6c4c8283f1be77214b949c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -838,6 +838,38 @@
     "\n",
     "# Save plot \n",
     "# embed_minimal_html(\"plot.html\", views=[vbox_all], title=\"Mixture embeddings AGP\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "host_body_habitat\n",
+       "UBERON:feces            284\n",
+       "nan                    3214\n",
+       "uberon:blood              3\n",
+       "uberon:ear               55\n",
+       "uberon:eye               54\n",
+       "uberon:feces          24873\n",
+       "uberon:hair              19\n",
+       "uberon:nose             297\n",
+       "uberon:oral cavity     2259\n",
+       "uberon:skin            1405\n",
+       "uberon:vagina           145\n",
+       "Name: host_body_habitat, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata.obs[\"host_body_habitat\"].groupby(adata.obs[\"host_body_habitat\"]).count()"
    ]
   },
   {
